# heartkelp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: heartkelp.desktop  heartkelp.metainfo.xml
examples/: freeze_probe.rs  highlight_probe.rs  region_preview_probe.rs  shm_overlay_probe.rs  transparency_probe.rs  transparency_probe2.rs
src/: app.rs  capture.rs  config.rs  encoder.rs  highlight.rs  main.rs  region.rs  types.rs
