[package]
name = "heartkelp"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
eframe = "0.33"
egui = "0.33"
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
pipewire = "0.9"
gifski = "1.34"
rgb = "0.8"
imgref = "1"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
open = "5"
