[package]
name = "heartkelp"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Wayland screen-to-GIF recorder"
homepage = "https://github.com/dend/heartkelp"
repository = "https://github.com/dend/heartkelp"
readme = "README.md"

[dependencies]
eframe = "0.33"
egui = "0.33"
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
pipewire = "0.9"
gifski = "1.34"
rgb = "0.8"
imgref = "1"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
open = "5"
libc = "0.2"

[package.metadata.deb]
maintainer = "Den Delimarsky"
depends = "libpipewire-0.3-0, xdg-desktop-portal"
section = "utils"
priority = "optional"
assets = [
    ["target/release/heartkelp", "usr/bin/", "755"],
    ["assets/heartkelp.desktop", "usr/share/applications/", "644"],
    ["media/kelp.png", "usr/share/icons/hicolor/128x128/apps/heartkelp.png", "644"],
    ["README.md", "usr/share/doc/heartkelp/README.md", "644"],
]
